--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-numpy>=1.22.0,<2.0.0
-pandas>=1.5.0,<2.0.0
-geopandas>=0.12.0,<0.13.0
-Shapely>=1.8.0,<2.0.0
-ezdxf>=0.17.0,<0.18.0
-pyproj>=3.3.0,<4.0.0
-fiona>=1.9.0,<2.0.0
+streamlit
+pandas
+geopandas
+ezdxf
+shapely
